# lib/db/src/schema/index.ts
@@ -1,5 +1,6 @@
 export * from "./customers";
 export * from "./acUnits";
+export * from "./employees";
 export * from "./quotes";
 export * from "./workOrders";
 export * from "./progress";
